--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Playfair%20Display%3A400%2C700%2C900%7COpen%20Sans%3A400%2C400italic%2C600%2C600italic%2C700%2C700italic&amp;display=swap" rel="stylesheet" nonce="">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Cập nhật 2024 ưu việt</title>
 </head>
 <style>
+    body{
+        font-family: 'Playfair Display', serif;
+    }
     .main{
         background: url(./assets/img/bg.jfif);
         position: fixed;
@@ -22,13 +26,18 @@
     <div class="main overflow-y-scroll">
         <div class="content w-full h-full">
             <header class="bg-white sticky top-0 z-10 p-2">
-                <div class="logo w-[200px] m-auto sm:m-0">
-                    <img src="./assets/img/logo.png" alt="">
+                <div class="logo w-[700px] flex items-center">
+                    <img src="./assets/img/logo.png" alt="" class="w-[100px] m-auto sm:m-0">
+                    <p class="text-2xl ml-5 text-[#000000CC] font-bold">
+                        Cập nhật 2024 ưu việt
+                    </p>
                 </div>
             </header>
             <div class="main-box max-w-[400px] w-full absolute top-[50%] translate-y-[-50%] left-[50%] translate-x-[-50%] p-2">
                 <div class="thumnail w-[100%]">
-                    <img src="./assets/img/thumnail.png" alt="" class="w-full">
+                    <a href="https://www.hay88.one/?inviteCode=7066981">
+                        <img src="./assets/img/thumnail.png" alt="" class="w-full">
+                    </a>
                 </div>
                 <div class="link w-full my-2">
                     <a href="https://www.hay88.one/?inviteCode=7066981">
