--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cập nhật 2024 ưu việt</title>
 </head>
 <style>
-    body{
+    .title{
         font-family: 'Playfair Display', serif;
     }
     .main{
@@ -28,7 +28,7 @@
             <header class="bg-white sticky top-0 z-10 p-2">
                 <div class="logo max-w-[310px] sm:max-w-[700px] w-full flex items-center">
                     <img src="./assets/img/logo.png" alt="" class="w-[100px] m-auto sm:m-0">
-                    <p class="text-lg sm:text-2xl ml-5 text-[#000000CC] font-bold">
+                    <p class="title text-lg sm:text-2xl ml-5 text-[#000000CC] font-bold">
                         Cập nhật 2024 ưu việt
                     </p>
                 </div>
