--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="content w-full h-full">
             <header class="bg-white sticky top-0 z-10 p-2">
                 <div class="logo sm:max-w-[700px] w-full flex items-center">
-                    <img src="./assets/img/logo.png" alt="" class="w-[100px] m-auto sm:m-0">
+                    <img src="./assets/img/logo.png" alt="" class="w-[100px] sm:m-0">
                     <p class="title hidden text-lg md:block sm:text-2xl ml-5 text-[#000000CC] font-bold">
                         Cập nhật 2024 ưu việt
                     </p>
